--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "be",
+  "name": "backend-server-kikishop",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend API Server",
   "type": "module",
-  "main": ".prettierrc.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "author": "",
   "license": "ISC",
@@ -24,8 +29,10 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.7",
-    "nodemon": "^3.0.1",
     "pusher": "^5.2.0",
     "query-string": "^8.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
