build docker github

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.8'
 
 services:
-  backend:
+  backend-kikishop:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "8081:8081"
     environment:
       - NODE_ENV=production
-      - PORT=3000
+      - PORT=8081
     env_file:
       - .env
     volumes:
